Revert "Fix images overflowing 100% width in Firefox"
This reverts commit ba95c3135911ab7046d7d0fe185230d225c29afe.

--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -347,8 +347,11 @@
 		}
 		
 		.display-data-inner {
-			display: block;
+			display: inline-block;
 			position: relative;
+			&.display-data-inner-full-width {
+				display: block;
+			}
 		}
 		
 		.display-data, .file-modified, .file-modified-image {
